# wordcount

./: CMakeLists.txt  README.md  main.cpp  report.py  wordcount.cpp  wordcount.h
